# portfolio-multi-agent-orchestration

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: project_manifest.md
